kubernetes/apps/media/qbittorrent/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: qbittorrent
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: traefik-internal-network
            io.kubernetes.pod.namespace: network
        - matchLabels:
            app.kubernetes.io/name: prowlarr
            io.kubernetes.pod.namespace: media
        - matchLabels:
            app.kubernetes.io/name: sonarr
            io.kubernetes.pod.namespace: media
        - matchLabels:
            app.kubernetes.io/name: radarr
            io.kubernetes.pod.namespace: media
        - matchLabels:
            app.kubernetes.io/name: autobrr
            io.kubernetes.pod.namespace: media
        - matchLabels:
            app.kubernetes.io/name: notifiarr
            io.kubernetes.pod.namespace: media
        - matchLabels:
            app.kubernetes.io/name: qbit-manage
            io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            io.kubernetes.pod.namespace: observability
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
  egress:
    - toFQDNs:
        - matchName: www.privateinternetaccess.com
        - matchName: serverlist.piaservers.net
        - matchName: api.ipify.org
        - matchName: icanhazip.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toCIDR:
        - 129.6.15.29/32
        - 132.163.97.2/32
      toPorts:
        - ports:
            - port: "13"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "1337"
              protocol: UDP
            - port: "1337"
              protocol: TCP
